@@ -66,7 +66,7 @@
 <refsection>
    <title>Description</title>
    <para>
-Search the minimum of a multivariable mixed integer nonlinear programming unconstrained optimization problem specified by :
+Search the minimum of a multivariable mixed-integer nonlinear programming unconstrained optimization problem specified by :
 Find the minimum of f(x) such that
    </para>
    <para>
